Fix some url bug when exporting website.
Add new fig shortcode replacing the default figure one.

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://www.gtsc.ch"
+baseURL = "http://atoverride.altervista.org/gtsc/"
 languageCode = "it"
 title = "Sito ufficiale GTSC"
